# rtrTranslator

./: .gitignore  Cargo.toml  origin.txt  readme.md  test.rs  test2.rs
lang/: de.txt  it.txt  origin.txt
src/: main.rs
testdir/: test3.rs
