[package]
name = "rtr_translator"
version = "0.1.0"
authors = ["Clément Guiton <clement.guiton.dev@gmail.com>"]
edition = "2018"
description = "A tool to create translation file for the rtr crate"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
walkdir = "2.3.1"